--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <link rel="stylesheet" type="text/css" href="homepage.css">
 </head>
 <body>
-<marquee bgcolor="orange"><b>Welcome to my webpage<b></marquee>
+<marquee bgcolor="chocolate">Welcome to my webpage</marquee>
 
 <font face="Algerian" font size=5>
 <center><h1>Hi! I am Gnana Saketh</h1></center>
@@ -12,7 +12,7 @@
 
 <br>
 
-<strong><p id="tyler">I am from <abbr title="CSE [AI & ML]">CSM</abbr></p></strong>
+<strong><h1 id="tyler">I am from <abbr title="CSE [AI & ML]">CSM</abbr></h1></strong>
 
 <br>
 
