--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 <br>
 
-<p>For more about AI - <a href ="">click here</a> </p>
+<p>For more about AI - <a href ="csm.html">click here</a> </p>
 </body>
 </html>
