--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <marquee bgcolor="chocolate">Welcome to my webpage</marquee>
 
 <font face="Algerian" font size=5>
-<center><h1>Hi! I am Gnana Saketh</h1></center>
+<center><h1>Hi! I a<font size=7 id="wayne">m Gnana Sa</font>keth</h1></center>
 </font>
 
 <br>
@@ -17,5 +17,13 @@
 <br>
 
 <p>For more about AI - <a href ="csm.html">click here</a> </p>
+<address>
+      Contact:
+      Mr. Gnann Saketh,
+      Microsoft Company,
+      920 Fourth Avenue, 
+      Suite 2900, Seattle,
+      Washington, 95104
+</address>
 </body>
 </html>
