--- a/csm.html
+++ b/csm.html
@@ -5,7 +5,8 @@
 </head>
 <body>
       <i><h1 align=center>Artificial Intelligence</h1></i>
-      <center><img src="ai.jpg"></center>
+      <img src="ai.jpg">
+      <img src="ai2.jpg">
       <br>
       <font face="Baskerville Old Face" font size=6>
       <p><b>Artificial Intelligence</b> refers to the intelligence of machines. This is in contrast to 
