--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <br>
 
 <p>For more about AI - <a href ="csm.html">click here</a> </p>
+<p>For new webpage - <a href="new.html">click here</a></p>
 <address>
       Contact:
       Mr. Gnann Saketh,
